--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "tutorial1"
+name = "cpphelp"
 version = "0.1.0"
 edition = "2021"
+
+[profile.release]
+strip = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
