--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ strip = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+git2 = "0.16.1"
